// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Title /> should render Title with default properties 1`] = `
<Text
  accessibilityRole="header"
  color="surface.text.normal.lowContrast"
  fontFamily="text"
  fontSize={600}
  fontStyle="normal"
  fontWeight="bold"
  lineHeight="4xl"
  style={
    Array [
      Object {
        "color": "hsla(217, 56%, 17%, 1)",
        "fontFamily": "Lato",
        "fontSize": 20,
        "fontStyle": "normal",
        "fontWeight": "700",
        "lineHeight": 40,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationLine": "none",
      },
    ]
  }
>
  Displaying Landing Screen Title
</Text>
`;

exports[`<Title /> should render Title with variant "large" 1`] = `
<Text
  accessibilityRole="header"
  color="surface.text.subdued.lowContrast"
  fontFamily="text"
  fontSize={1000}
  fontStyle="normal"
  fontWeight="bold"
  lineHeight="6xl"
  style={
    Array [
      Object {
        "color": "hsla(217, 18%, 45%, 1)",
        "fontFamily": "Lato",
        "fontSize": 32,
        "fontStyle": "normal",
        "fontWeight": "700",
        "lineHeight": "undefinedpx",
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationLine": "none",
      },
    ]
  }
>
  Displaying Landing Screen Title
</Text>
`;

exports[`<Title /> should render Title with variant "medium" 1`] = `
<Text
  accessibilityRole="header"
  color="surface.text.muted.lowContrast"
  fontFamily="text"
  fontSize={700}
  fontStyle="normal"
  fontWeight="bold"
  lineHeight="4xl"
  style={
    Array [
      Object {
        "color": "hsla(216, 16%, 60%, 1)",
        "fontFamily": "Lato",
        "fontSize": 24,
        "fontStyle": "normal",
        "fontWeight": "700",
        "lineHeight": 40,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationLine": "none",
      },
    ]
  }
>
  Displaying Landing Screen Title
</Text>
`;

exports[`<Title /> should render Title with variant "small" 1`] = `
<Text
  accessibilityRole="header"
  color="surface.text.normal.lowContrast"
  fontFamily="text"
  fontSize={600}
  fontStyle="normal"
  fontWeight="bold"
  lineHeight="4xl"
  style={
    Array [
      Object {
        "color": "hsla(217, 56%, 17%, 1)",
        "fontFamily": "Lato",
        "fontSize": 20,
        "fontStyle": "normal",
        "fontWeight": "700",
        "lineHeight": 40,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationLine": "none",
      },
    ]
  }
>
  Displaying Landing Screen Title
</Text>
`;

exports[`<Title /> should render Title with variant "small" and contrast "high" 1`] = `
<Text
  accessibilityRole="header"
  color="surface.text.normal.highContrast"
  fontFamily="text"
  fontSize={600}
  fontStyle="normal"
  fontWeight="bold"
  lineHeight="4xl"
  style={
    Array [
      Object {
        "color": "hsla(0, 0%, 100%, 1)",
        "fontFamily": "Lato",
        "fontSize": 20,
        "fontStyle": "normal",
        "fontWeight": "700",
        "lineHeight": 40,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationLine": "none",
      },
    ]
  }
>
  Displaying Landing Screen Title
</Text>
`;
